[gd_scene load_steps=6 format=3 uid="uid://bp3k6x8y9d1mn"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.2, 0.3, 0.5, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.3, 0.5, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.8, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.15, 0.25, 0.4, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus"]
bg_color = Color(0.4, 0.6, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16, 0.18, 0.22, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.86, 0.94, 1, 1)
theme_override_font_sizes/font_size = 48
text = "LABORATORY SETTINGS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.78, 0.86, 1)
theme_override_font_sizes/font_size = 18
text = "Configure Operations & Protocols"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="AudioSettings" type="VBoxContainer" parent="VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AudioLabel" type="Label" parent="VBox/SettingsContainer/AudioSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Audio Settings"

[node name="MasterVolumeRow" type="HBoxContainer" parent="VBox/SettingsContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBox/SettingsContainer/AudioSettings/MasterVolumeRow"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Master Volume:"

[node name="Slider" type="HSlider" parent="VBox/SettingsContainer/AudioSettings/MasterVolumeRow"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 80.0

[node name="ValueLabel" type="Label" parent="VBox/SettingsContainer/AudioSettings/MasterVolumeRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "80%"

[node name="SFXVolumeRow" type="HBoxContainer" parent="VBox/SettingsContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBox/SettingsContainer/AudioSettings/SFXVolumeRow"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Sound Effects Volume:"

[node name="Slider" type="HSlider" parent="VBox/SettingsContainer/AudioSettings/SFXVolumeRow"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 80.0

[node name="ValueLabel" type="Label" parent="VBox/SettingsContainer/AudioSettings/SFXVolumeRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "80%"

[node name="HSeparator2" type="HSeparator" parent="VBox/SettingsContainer"]
layout_mode = 2

[node name="GraphicsSettings" type="VBoxContainer" parent="VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GraphicsLabel" type="Label" parent="VBox/SettingsContainer/GraphicsSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Graphics Settings"

[node name="QualityRow" type="HBoxContainer" parent="VBox/SettingsContainer/GraphicsSettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBox/SettingsContainer/GraphicsSettings/QualityRow"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Graphics Quality:"

[node name="OptionButton" type="OptionButton" parent="VBox/SettingsContainer/GraphicsSettings/QualityRow"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
selected = 1
item_count = 3
popup/item_0/text = "Low"
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="FullscreenRow" type="HBoxContainer" parent="VBox/SettingsContainer/GraphicsSettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBox/SettingsContainer/GraphicsSettings/FullscreenRow"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Fullscreen:"

[node name="CheckBox" type="CheckButton" parent="VBox/SettingsContainer/GraphicsSettings/FullscreenRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="HSeparator3" type="HSeparator" parent="VBox/SettingsContainer"]
layout_mode = 2

[node name="GameplaySettings" type="VBoxContainer" parent="VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GameplayLabel" type="Label" parent="VBox/SettingsContainer/GameplaySettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Gameplay Settings"

[node name="DifficultyRow" type="HBoxContainer" parent="VBox/SettingsContainer/GameplaySettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBox/SettingsContainer/GameplaySettings/DifficultyRow"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Research Intensity:"

[node name="OptionButton" type="OptionButton" parent="VBox/SettingsContainer/GameplaySettings/DifficultyRow"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
selected = 1
item_count = 3
popup/item_0/text = "Easy"
popup/item_1/text = "Standard"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="UISettings" type="VBoxContainer" parent="VBox/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UILabel" type="Label" parent="VBox/SettingsContainer/UISettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "UI Settings"

[node name="ThemeRow" type="HBoxContainer" parent="VBox/SettingsContainer/UISettings"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBox/SettingsContainer/UISettings/ThemeRow"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Visual Theme:"

[node name="ThemeDropdown" type="OptionButton" parent="VBox/SettingsContainer/UISettings/ThemeRow"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
item_count = 3
popup/item_0/text = "Default"
popup/item_1/text = "Retro Terminal"
popup/item_1/id = 1
popup/item_2/text = "High Contrast"
popup/item_2/id = 2

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ApplyButton" type="Button" parent="VBox/ButtonRow"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "Apply"

[node name="BackButton" type="Button" parent="VBox/ButtonRow"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "Back"

[connection signal="value_changed" from="VBox/SettingsContainer/AudioSettings/MasterVolumeRow/Slider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="VBox/SettingsContainer/AudioSettings/SFXVolumeRow/Slider" to="." method="_on_sfx_volume_changed"]
[connection signal="item_selected" from="VBox/SettingsContainer/GraphicsSettings/QualityRow/OptionButton" to="." method="_on_graphics_quality_changed"]
[connection signal="toggled" from="VBox/SettingsContainer/GraphicsSettings/FullscreenRow/CheckBox" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="VBox/SettingsContainer/GameplaySettings/DifficultyRow/OptionButton" to="." method="_on_difficulty_changed"]
[connection signal="pressed" from="VBox/ButtonRow/ApplyButton" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="VBox/ButtonRow/BackButton" to="." method="_on_back_pressed"]
